--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 			ArchaeoGlobe Interactive Map
 		</title>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-		<!--<script src="d3.v3.min.js"></script>-->
+		<script src="d3.v3.min.js"></script>
 		<script src="http://d3js.org/colorbrewer.v1.min.js"></script>
-		<!--<script src="colorbrewer.v1.min.js"></script>-->
+		<script src="colorbrewer.v1.min.js"></script>
 
 		<style type="text/css">
 
@@ -46,7 +46,7 @@
 		var color = d3.scale.quantize()
 		.range(colorbrewer.Greens[8]);
 
-		d3.csv("data/ArchaeoGlobeData.csv", function (data){
+		d3.csv("ArchaeoGlobeData.csv", function (data){
 			// make the data available
 			surveyData = data;
 
