--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</style>
 	</head>
 	<body>
-		<h2 style = "text-align:center; color:steelblue"><bold>ArchaeoGlobe Interactive Map</bold></h2>
+		<h2 style = "text-align:center; color:black"><bold>ArchaeoGlobe Interactive Map</bold></h2>
 
 		<script type="text/javascript">
 
